--- a/《谁在梦我》.md
+++ b/《谁在梦我》.md
@@ -1,4 +1,4 @@
-# 《谁在梦我？》
+# 谁在梦我？
 
 夜幕低垂，仿佛被人用墨水在天顶上一笔笔涂抹。城市的高楼在朦胧雾气里冷漠矗立，远远望去，宛如静默的尖塔群。霓虹色彩蜂拥在建筑物之间，呈现出一层层反常的、虚浮的光，映照得地面仿佛一片水域。这里是 2098 年，DreamLens™ 遍布大街小巷。只要有人将头部设备轻轻戴上，就能一头栽进人造梦境的怀抱，再不愿离开。
 
